// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";
option csharp_namespace = "Sako.SimpleGrpc";

package simplegrpc;

service StreamService{
  rpc Events(stream Request) returns (stream Payload) {}
  rpc Publish(Json) returns (Success) {}
}


message EventType {
  string type = 1;
}

message Success {
  bool isSuccess = 1;
}

message Json {
  string data = 1;
}

message Request {
  repeated EventType Events = 1;
  bool forceClose = 2;
}

message Payload {
  EventType eventType = 1;
  string data = 2;
}



